@@ -1,6 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Bump the share version to libuv v1.13.1
+  - Add a recommended test install of FFI::Platypus
+  - Diag out the install_type for better debugging later
 
 0.005     2017-07-08
   - Updated the requirements to include Alien::m4
